# redneck

./: .gitignore  README.md  pyproject.toml
docs/: demo.yaml
redneck/: __main__.py  builder.py  config.py  diag.py  plugins.py  resolver.py
redneck/commands/: build.py  check.py  groups.py  init.py
redplug/: modlist.py  modrinth.py
test/: pack.yml
test/config/: pack.yml
test/config/.redneck/rinth_cache/: 68a0befc16c03a0f.json  f16ef004333b8504.json
test/config/mods/: hello.yml
test/mods/: main.yml  second.yml
