[project]
name = "redneck"
version = "0.3.0"
description = "A small, plugin-driven, declarative modpack builder,"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
maintainers = [
  {name = "mjarduk", email = "mjarduk@gmail.com"}
]
packages = [
  { include = "redneck" },
  { include = "redplug" }
]

dependencies = [
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "rich>=14.3.3",
]

[project.scripts]
redneck = "redneck.__main__:main"

[project.urls]
Repository = "https://github.com/Ariss-Interactive/redneck"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
indent-width = 2

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true

[tool.hatch.build.targets.wheel]
packages = ["redneck", "redplug"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.hatch.build.targets.sdist]
include = [
  "redneck/",
  "redplug/",
]
